@@ -1,5 +1,5 @@
 /*
- * Copyright (C) Ltd. 2021-2021. Huawei Technologies Co., All rights reserved
+ * Copyright (C) Ltd. 2021-2022. Huawei Technologies Co., All rights reserved
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -54,46 +54,38 @@ import javax.servlet.http.HttpServletResponse;
 @RequestMapping("/api/resource")
 public class EmergencyResourceController {
     private static final Logger LOGGER = LoggerFactory.getLogger(EmergencyResourceController.class);
-
+    private static final String UTF_8 = "UTF-8";
     @Autowired
     EmergencyResourceService resourceService;
 
     /**
      * 上传依赖资源
      *
+     * @param authentication 登录信息
      * @param scriptId 编排脚本的ID
      * @param path 压测脚本路径 暂时不用
      * @param file 资源文件
      * @param response 请求响应
-     * @return {@link CommonResult
+     * @return {@link CommonResult}
      */
     @ApiOperation(value = "上传资源文件", notes = "用于上传脚本运行相关依赖")
     @PostMapping
     public CommonResult upload(UsernamePasswordAuthenticationToken authentication,
-        @RequestParam(value = "script_id", required = false) Integer scriptId,
+        @RequestParam(value = "script_id", required = false) int scriptId,
         @RequestParam(value = "path", defaultValue = "lib") String path,
         @RequestParam(value = "file") MultipartFile file, HttpServletResponse response) throws IOException {
         if (file == null || StringUtils.isEmpty(file.getOriginalFilename())) {
             response.setStatus(HttpServletResponse.SC_INTERNAL_SERVER_ERROR);
             return CommonResult.failed("请选择要上传的文件");
         }
-        if (scriptId == null && StringUtils.isEmpty(path)) {
-            response.setStatus(HttpServletResponse.SC_INTERNAL_SERVER_ERROR);
-            return CommonResult.failed("请选择脚本");
-        }
         CommonResult upload;
-        if (scriptId != null) {
-            try {
-                upload = resourceService.upload(((JwtUser) authentication.getPrincipal()).getUsername(), scriptId, path,
-                    file.getOriginalFilename(), file.getInputStream());
-            } catch (IOException e) {
-                LOGGER.error("can't upload resource.", e);
-                upload = CommonResult.failed(e.getMessage());
-                response.setStatus(HttpServletResponse.SC_INTERNAL_SERVER_ERROR);
-            }
-        } else {
-            LOGGER.warn("can't upload path resource");
-            upload = CommonResult.failed("压测脚本不能在此操作资源");
+        try {
+            upload = resourceService.upload(((JwtUser) authentication.getPrincipal()).getUsername(), scriptId, path,
+                file.getOriginalFilename(), file.getInputStream());
+        } catch (IOException e) {
+            LOGGER.error("can't upload resource.", e);
+            upload = CommonResult.failed(e.getMessage());
+            response.setStatus(HttpServletResponse.SC_INTERNAL_SERVER_ERROR);
         }
         if (!upload.isSuccess()) {
             response.setStatus(HttpServletResponse.SC_INTERNAL_SERVER_ERROR);
@@ -104,24 +96,23 @@ public class EmergencyResourceController {
     /**
      * 下载资源
      *
-     * @param pathOrId 压测脚本的路径或者编排脚本的ID
+     * @param resourceId 资源ID
      * @param fileName 资源名称
      * @param response 请求响应
      */
     @ApiOperation(value = "下载资源文件", notes = "用于下载上传后的脚本依赖资源")
-    @GetMapping("/{pathOrId}/{filename}")
-    public void downloadResource(@PathVariable(value = "pathOrId") String pathOrId,
+    @GetMapping("/{resourceId}/{filename}")
+    public void downloadResource(@PathVariable(value = "resourceId") int resourceId,
         @PathVariable(value = "filename") String fileName,
         HttpServletResponse response) {
         try (ServletOutputStream outputStream = response.getOutputStream()) {
-            int resourceId = Integer.valueOf(pathOrId);
-            response.setCharacterEncoding("UTF-8");
+            response.setCharacterEncoding(UTF_8);
             response.setContentType("application/vnd.openxmlformats-officedocument.spreadsheetml.sheet;charset=utf-8");
             response.setHeader("Content-Disposition",
-                "attachment;fileName=" + new String(URLEncoder.encode(fileName, "UTF-8").getBytes("UTF-8")));
+                "attachment;fileName=" + new String(URLEncoder.encode(fileName, UTF_8).getBytes(UTF_8)));
             resourceService.download(resourceId, fileName, outputStream);
             outputStream.flush();
-        } catch (NumberFormatException | IOException e) {
+        } catch (IOException e) {
             LOGGER.error("can't download path resource", e);
             response.setStatus(HttpServletResponse.SC_INTERNAL_SERVER_ERROR);
         }
@@ -130,20 +121,14 @@ public class EmergencyResourceController {
     /**
      * 删除资源
      *
-     * @param pathOrId 压测脚本的路径或者编排脚本的ID
+     * @param resourceId 资源ID
      * @param fileName 资源名称
-     * @return
+     * @return {@link CommonResult}
      */
     @ApiOperation(value = "删除资源文件", notes = "用于删除上传后的脚本相关依赖")
-    @DeleteMapping("/{pathOrId}/{filename}")
-    public CommonResult deleteResource(@PathVariable(value = "pathOrId") String pathOrId,
+    @DeleteMapping("/{resourceId}/{filename}")
+    public CommonResult deleteResource(@PathVariable(value = "resourceId") int resourceId,
         @PathVariable(value = "filename") String fileName) {
-        try {
-            int resourceId = Integer.valueOf(pathOrId);
-            return resourceService.deleteResourceByIdAndName(resourceId, fileName);
-        } catch (NumberFormatException e) {
-            LOGGER.error("can't delete path resource");
-            return CommonResult.failed("压测脚本不能在此操作资源");
-        }
+        return resourceService.deleteResourceByIdAndName(resourceId, fileName);
     }
 }
